[gd_scene load_steps=7 format=3 uid="uid://lightning_bolt_effect"]

[ext_resource type="Script" path="res://scripts/effects/lightning_bolt_effect.gd" id="1_script"]

[sub_resource type="Gradient" id="Gradient_sparks"]
offsets = PackedFloat32Array(0, 0.1, 1)
colors = PackedColorArray(0.6, 0.8, 1, 0, 0.7, 0.85, 1, 1, 0.4, 0.6, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sparks"]
gradient = SubResource("Gradient_sparks")

[sub_resource type="Curve" id="Curve_spark_scale"]
_data = [Vector2(0, 0.8), 0.0, 0.0, 0, 0, Vector2(0.2, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_spark_scale"]
curve = SubResource("Curve_spark_scale")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sparks"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 40.0
initial_velocity_max = 120.0
gravity = Vector3(0, 80, 0)
damping_min = 10.0
damping_max = 30.0
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_spark_scale")
color_ramp = SubResource("GradientTexture1D_sparks")

[node name="LightningBoltEffect" type="Node2D"]
script = ExtResource("1_script")
segment_length = 18.0
jag_amount = 30.0
flicker_count = 4
visible_ratio = 0.7
branch_chance = 0.15
branch_length_ratio = 0.2
branch_width_ratio = 0.4
max_branches = 4
branch_angle_spread = 40.0
bolt_color = Color(0.5, 0.7, 1, 0.9)
core_color = Color(0.9, 0.95, 1, 1)
bolt_width = 7.0
core_width = 2.5
glow_color = Color(0.6, 0.8, 1.5, 0.5)
show_afterimage = true
afterimage_alpha = 0.08
auto_free = true
duration = 0.5

[node name="BoltLine" type="Line2D" parent="."]
visible = false
width = 7.0
default_color = Color(0.5, 0.7, 1, 0.9)
begin_cap_mode = 2
end_cap_mode = 2
joint_mode = 2

[node name="CoreLine" type="Line2D" parent="."]
visible = false
width = 2.5
default_color = Color(0.9, 0.95, 1, 1)
begin_cap_mode = 2
end_cap_mode = 2
joint_mode = 2

[node name="BranchContainer" type="Node2D" parent="."]

[node name="Sparks" type="GPUParticles2D" parent="."]
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_sparks")
lifetime = 0.4
one_shot = true
explosiveness = 0.9

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"
